# CS499-Capstone

./: CS499 Milestone 1 Code Review  README.md
CS499 Milestone 2 Enhancement One/: CS499 Milestone 2 Enhancement One Narrative.docx  README.md
CS499 Milestone 2 Enhancement One/CS499EhancementOne(C++)/: CMakeLists.txt
CS499 Milestone 2 Enhancement One/CS499EhancementOne(C++)/src/: main.cpp
CS499 Milestone 2 Enhancement One/CS499EnhancementOne(JAVA)/: build.gradle  settings.gradle
CS499 Milestone 3 Enhancement Two/: CS499 Milestone 3 Enhancement Two Narrative.docx
CS499 Milestone 3 Enhancement Two/AFTER ENHACEMENT/: settings.gradle
CS499 Milestone 3 Enhancement Two/BEFORE ENHACEMENT/app/: build.gradle
CS499 Milestone 3 Enhancement Two/BEFORE ENHACEMENT/app/src/main/: AndroidManifest.xml
CS499 Milestone 3 Enhancement Two/BEFORE ENHACEMENT/gradle/: libs.versions.toml
CS499 Milestone 4 Enhancement Three/: CS499 Milestone 4 Enhancement Three Narrative.docx  README.md
CS499 Milestone 4 Enhancement Three/AFTER ENHANCEMENT/: settings.gradle
CS499 Milestone 4 Enhancement Three/AFTER ENHANCEMENT/app/: build.gradle
CS499 Milestone 4 Enhancement Three/AFTER ENHANCEMENT/app/src/main/: AndroidManifest.xml
CS499 Milestone 4 Enhancement Three/AFTER ENHANCEMENT/gradle/: libs.versions.toml
CS499 Milestone 4 Enhancement Three/AFTER ENHANCEMENT/saslshim/: build.gradle
CS499 Milestone 4 Enhancement Three/BEFORE ENHANCEMENT/app/src/main/: AndroidManifest.xml
CS499 Milestone 4 Enhancement Three/BEFORE ENHANCEMENT/gradle/wrapper/: gradle-wrapper.properties
(+61 files in other folders)
